<resources>
    <string name="app_name">I See</string>
    <string name="登录">登录</string>
    <string name="注册">注册</string>
    <string name="昵称">昵称</string>
    <string name="性别">性别</string>
    <string name="个性签名">个性签名</string>
    <string name="其他登录方式">— 其他登录方式 —</string>
    <string name="忘记密码">忘记密码</string>
    <string name="还没有账号">还有账号？快来注册～</string>
    <string name="请输入用户名">请输入用户名</string>
    <string name="请输入用户名或邮箱">请输入用户名或邮箱</string>
    <string name="请输入邮箱">请输入邮箱</string>
    <string name="请输入密码">请输入密码</string>
    <string name="exit">退出当前账号</string>
    <string name="请再次输入密码">请再次输入密码</string>
    <string name="最in试色">最in试色</string>
    <string name="长草视频">长草视频</string>
    <string name="视频">大家都在看</string>
    <string name="试色">大家都在试</string>
    <string name="资讯">大家都在聊</string>
    <string name="更多">更多</string>
    <string name="Type">Type something</string>
    <string name="搜索">搜索</string>
    <string name="搜索结果">搜索结果</string>
    <string name="主页">主页</string>
    <string name="作者">作者</string>
    <string name="title">标题</string>
    <string name="info">简介</string>
    <string name="name">用户名</string>
    <string name="num">666</string>
    <string name="search_hint">输入品牌、色号、肤色等关键字</string>
    <string name="local">所在地</string>
    <string name="birthday">生日</string>
    <string name="email">邮箱</string>
    <string name="qq">QQ</string>
    <string name="编辑个人信息">编辑个人信息</string>
    <string name="爱试广场">爱试广场</string>
    <string name="种草视频">长草视频</string>
    <string name="热门资讯">热门资讯</string>
    <string name="资讯杂谈">资讯杂谈</string>
    <string name="积分问答">积分问答</string>
    <string name="综合排序">综合排序</string>
    <string name="最新发布">最新发布</string>
    <string name="最多点击">最多点击</string>
    <string name="最多点赞">最多点赞</string>
    <string name="最多收藏">最多收藏</string>
    <string name="姓名">姓名</string>
    <string name="最新">最新</string>
    <string name="最热">最热</string>
    <string name="个人标签">个人标签</string>
    <string name="色号">色号：</string>
    <string name="色号样例">lady bug</string>
    <string name="内容">内容</string>
    <string name="标题">标题</string>
    <string name="品牌">Mac</string>
    <string name="款式">lady bug</string>
    <string name="查看全部">查看全部</string>
    <string name="搜索问题">搜索问题</string>
    <string name="我要提问">我要提问</string>
    <string name="热门搜索">热门搜索</string>
    <string name="搜索历史">搜索历史</string>
    <string name="官方参数">官方参数</string>
    <string name="口红评测">口红评测</string>
    <string name="用户试色">用户试色</string>
    <string name="相似色号">相似色号</string>
    <string name="热度">热度:</string>
    <string name="滋润度">滋润度:</string>
    <string name="持久度">持久度:</string>
    <string name="显色">显色:</string>
    <string name="基本信息">基本信息</string>
    <string name="我的标签">我的标签</string>
    <string name="添加标签">+添加标签</string>
    <string name="点击返回顶层">点击返回顶层</string>
    <string name="更多信息">更多信息</string>
    <string name="其他设置">其他设置</string>
    <string name="设置">设置中心</string>
    <string name="信息">信息中心</string>
    <string name="离我最近">离我最近:</string>
    <string name="所有地址">所有地址:</string>
    <string name="当前定位">当前定位:</string>
    <string name="重庆市">重庆市</string>
    <string name="foot_text">人家就这么多啦</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_edit">输入品牌、色号、肤色等关键字</string>
    <string name="推荐">推荐</string>
    <string name="我的发布">我的发布</string>
    <string name="我的足迹">我的足迹</string>
    <string name="点赞">点赞:</string>
    <string name="关注">关注</string>
    <string name="关注plus">+关注</string>
    <string name="更多热门新闻">更多热门新闻</string>
    <string name="分类">分类</string>
    <string name="more">更多</string>
    <string name="发售">发售时间:</string>
    <string name="day">2018.03.2</string>
    <string name="time">13:30</string>
    <dimen name="space">8dp</dimen>
    <string name="titlehint">此处是标题此处是标题此处是标题</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="标题hello_blank_fragment">Hello blank fragment</string>

</resources>