<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/common_bg">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FCFAF2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:id="@+id/fragment_official_bg"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/textColor_White"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/fragment_official_text_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/fragment_official_bg"
            app:layout_constraintTop_toTopOf="@+id/fragment_official_bg"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/热度"
            android:textSize="16sp"
            android:textColor="@color/textColor_Black"/>

        <TextView
            android:id="@+id/fragment_official_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/fragment_official_text_one"
            app:layout_constraintTop_toBottomOf="@+id/fragment_official_text_one"
            android:text="@string/滋润度"
            android:textSize="16sp"
            android:textColor="@color/textColor_Black"/>

        <TextView
            android:id="@+id/fragment_official_text_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/fragment_official_text_one"
            app:layout_constraintTop_toBottomOf="@+id/fragment_official_text_two"
            android:text="@string/持久度"
            android:textSize="16sp"
            android:textColor="@color/textColor_Black"/>

        <TextView
            android:id="@+id/fragment_official_text_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/fragment_official_text_one"
            app:layout_constraintTop_toBottomOf="@+id/fragment_official_text_three"
            android:text="@string/显色"
            android:textSize="16sp"
            android:textColor="@color/textColor_Black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/local_image"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="@+id/fragment_official_text_five"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_official_text_five"
            app:layout_constraintEnd_toStartOf="@+id/fragment_official_text_five"/>

        <TextView
            android:id="@+id/fragment_official_text_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/fragment_official_text_one"
            app:layout_constraintTop_toBottomOf="@+id/fragment_official_bg"
            android:text="@string/离我最近"
            android:textSize="18sp"
            android:textColor="@color/textColor_Black"/>

        <TextView
            android:id="@+id/fragment_official_text_closet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/重庆市"
            android:textSize="16sp"
            android:textColor="@color/textColor_Blue"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/fragment_official_text_five"
            app:layout_constraintTop_toTopOf="@+id/fragment_official_text_five"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_official_text_five"/>

    </android.support.constraint.ConstraintLayout>
</layout>