<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/itemColor">

    <ImageView
        android:id="@+id/five_item_image"
        android:layout_width="120dp"
        android:layout_height="105dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/five_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="205dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/five_item_image"
        app:layout_constraintStart_toEndOf="@+id/five_item_image"
        android:text="@string/title"
        android:textColor="@color/textColor_Black"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/five_item_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="200dp"
        android:maxHeight="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/five_item_title"
        app:layout_constraintStart_toStartOf="@+id/five_item_title"
        android:text="@string/info"
        android:textColor="@color/textColor_Gray"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/five_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/five_item_title"
        app:layout_constraintBottom_toBottomOf="@+id/five_item_image"
        android:text="@string/name"
        android:textColor="@color/textColor_Blue"
        android:textSize="12sp"/>

    <ImageView
        android:id="@+id/five_item_collect"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/collect"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/five_item_collect_text"
        app:layout_constraintBottom_toBottomOf="@id/five_item_image"/>

    <TextView
        android:id="@+id/five_item_collect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/five_item_image"
        android:text="@string/num"
        android:textColor="@color/textColor_Red"
        android:textSize="14sp"/>

</android.support.constraint.ConstraintLayout>

