<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnablePureScrollMode="true"
        app:srlEnableLoadmore="true"
        app:srlDragRate="1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/activity_login_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_centerInParent="true"
            android:maxLines="1"
            android:textCursorDrawable="@null"
            android:hint="@string/请输入用户名或邮箱"
            app:met_textColorHint="@color/textColor_White"
            app:met_baseColor="@color/textColor_White"
            app:met_primaryColor="@color/textColor_White"
            app:met_iconLeft="@drawable/edit_user" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/activity_login_edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:maxLines="1"
            android:layout_below="@+id/activity_login_edit_account"
            android:layout_centerHorizontal="true"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:hint="@string/请输入密码"
            app:met_textColorHint="@color/textColor_White"
            app:met_baseColor="@color/textColor_White"
            app:met_primaryColor="@color/textColor_White"
            app:met_iconLeft="@drawable/edit_pass"/>

        <TextView
            android:id="@+id/activity_login_edit_text_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_login_edit_pass"
            android:text="@string/忘记密码"
            android:layout_alignEnd="@+id/activity_login_login_btn"/>

        <Button
            android:id="@+id/activity_login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/登录"
            android:textColor="@color/textColor_White"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:background="@drawable/login_btn_bg"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/activity_login_edit_text_forget"/>

        <TextView
            android:id="@+id/activity_login_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/activity_login_login_btn"
            android:text="@string/其他登录方式"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_login_qq"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/login_qq"
            android:layout_alignStart="@+id/activity_login_login_btn"
            android:layout_alignTop="@+id/activity_login_weibo"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_login_weibo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/login_weibo"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/activity_login_login_text"
            android:layout_centerHorizontal="true"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_login_sns"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/login_sns"
            android:layout_alignEnd="@+id/activity_login_login_btn"
            android:layout_alignTop="@+id/activity_login_weibo"/>

        <TextView
            android:id="@+id/activity_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/还没有账号"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/activity_login_sns"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</layout>