<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/common_bg">

        <ImageView
            android:id="@+id/fragment_four_choose"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/toolbar_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_four_text_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/fragment_four_choose"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_four_choose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_four_text_two"
            android:text="@string/综合排序"
            android:textSize="14sp"
            android:textColor="@color/textColor_Black"/>

        <TextView
            android:id="@+id/fragment_four_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/fragment_four_choose"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_four_choose"
            app:layout_constraintStart_toEndOf="@+id/fragment_four_text_one"
            app:layout_constraintEnd_toStartOf="@id/fragment_four_text_three"
            android:text="@string/最新发布"
            android:textSize="15sp"
            android:textColor="@color/textColor_White"/>

        <TextView
            android:id="@+id/fragment_four_text_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/fragment_four_choose"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_four_choose"
            app:layout_constraintStart_toEndOf="@+id/fragment_four_text_two"
            app:layout_constraintEnd_toStartOf="@+id/fragment_four_text_four"
            android:text="@string/最多点赞"
            android:textSize="15sp"
            android:textColor="@color/textColor_White"/>

        <TextView
            android:id="@+id/fragment_four_text_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/fragment_four_choose"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_four_choose"            app:layout_constraintStart_toEndOf="@+id/fragment_four_text_three"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/最多收藏"
            android:textSize="15sp"
            android:textColor="@color/textColor_White"/>

        <ImageView
            android:id="@+id/fragment_four_question"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_four_choose"
            android:background="@color/itemColor"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/fragment_four_edit_text"
            android:layout_width="225dp"
            android:layout_height="45dp"
            android:drawablePadding="5dp"
            android:gravity="bottom"
            android:drawableStart="@drawable/search_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fragment_four_btn"
            app:layout_constraintTop_toTopOf="@+id/fragment_four_question"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_four_question"
            android:hint="@string/搜索问题"

            app:met_baseColor="@color/underlineColor_Coffee"
            app:met_primaryColor="@color/underlineColor_Coffee"
            android:textCursorDrawable="@null"/>

        <Button
            android:id="@+id/fragment_four_btn"
            android:layout_width="68dp"
            android:layout_height="36dp"
            android:background="@drawable/question_btn_bg"
            android:text="@string/我要提问"
            android:textColor="@color/textColor_Black"
            app:layout_constraintStart_toEndOf="@id/fragment_four_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_four_question"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_four_question"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_community_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp">
        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

</layout>

