<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/common_bg">

        <ImageView
            android:id="@+id/fragment_one_choose"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/toolbar_bg"/>

        <TextView
            android:id="@+id/fragment_one_text_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/fragment_one_choose"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_one_choose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_one_text_two"
            android:text="@string/综合排序"
            android:textSize="14sp"
            android:textColor="@color/textColor_Black"/>

        <TextView
            android:id="@+id/fragment_one_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/fragment_one_choose"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_one_choose"
            app:layout_constraintStart_toEndOf="@+id/fragment_one_text_one"
            app:layout_constraintEnd_toStartOf="@id/fragment_one_text_three"
            android:text="@string/最新发布"
            android:textSize="15sp"
            android:textColor="@color/textColor_White"/>

        <TextView
            android:id="@+id/fragment_one_text_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/fragment_one_choose"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_one_choose"
            app:layout_constraintStart_toEndOf="@+id/fragment_one_text_two"
            app:layout_constraintEnd_toStartOf="@+id/fragment_one_text_four"
            android:text="@string/最多点击"
            android:textSize="15sp"
            android:textColor="@color/textColor_White"/>

        <TextView
            android:id="@+id/fragment_one_text_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/fragment_one_choose"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_one_choose"            app:layout_constraintStart_toEndOf="@+id/fragment_one_text_three"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/最多收藏"
            android:textSize="15sp"
            android:textColor="@color/textColor_White"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_community_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_one_choose">
        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout
>

</layout>